# wallet-and-risky-features-data-pipeline

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.md  Makefile  README.md  config.py  main.py  pull_request_template.md  pyproject.toml
.github/workflows/: develop.yml  main.yml
config/: map_db.toml  settings.toml
devops/airflow/: Dockerfile  docker-compose.yml  requirements-dev.txt
devops/airflow/config/: airflow-variables.json  setup_aws_connection.sh
devops/airflow/dags/: dag_ethereum_wallet_transactions.py  helper_dag.py  wallet_transactions_utils.py
devops/ecs/: Dockerfile
devops/ecs/infrastructure/: build_and_push_ecr_image.sh  main.tf  variables.tf  versions.tf
src/helpers/: athena.py  data_transformations.py  ethereum_node.py  files.py  get_abi_etherscan.py  get_token_metadata.py  get_token_metadata_transpose.py  typing.py
src/pipelines/analytics/: analytics_data_ingestion_pipeline.py
src/pipelines/analytics/features/: features_data_quality_pipeline.py  features_pipeline.py
src/pipelines/analytics/transformations/: ethereum_erc20_transactions.sql  ethereum_internal_transactions.sql  ethereum_normal_transactions.sql  ethereum_wallet_transactions.sql
src/pipelines/raw/: raw_data_ingestion_pipeline.py
src/pipelines/stage/: stage_data_ingestion_pipeline.py
src/pipelines/stage/transformations/: ethereum_blocks.sql  ethereum_contracts.sql  (+6 more)
src/schemas/: analytics_layer.py  stage_layer.py
tests/: check_rugpull_transaction.sql  conftest.py
tests/wallet/: test_balance_calculation.py  test_gold_wallet.py  test_silver_wallet.py
(+8 files in other folders)
