[tool.poetry]
name = "wallet-and-risky-features-data-pipeline"
version = "0.1.0"
description = ""
authors = ["Jhon Lucas <jhonlucaslife@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
ethereum-etl = "^2.1.2"
pre-commit = "^2.21.0"
pydantic = "^1.10.4"
nest-asyncio = "^1.5.6"
tqdm = "^4.65.0"
spectral-data-lib = {version = "2.1.5", source = "spectral-data-repository"}
tenacity = "^8.2.2"
aiohttp = "3.8.2"
duckdb = "^0.8.1"
retrying = "^1.3.4"


[[tool.poetry.source]]
name = "spectral-data-repository"
url = ""
priority = "secondary"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
yapf = "^0.32.0"
memory-profiler = "^0.61.0"
ipykernel = "^6.21.1"
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
